@@ -1,10 +1,15 @@
 SLog (0.9.2) unstable
 
-	* Система плагинов
+	* Система плагинов:
+		- LightLang
+		- Google Translate
+		- DICT
 	* Вкладка управления плагинами в диалоге настроек
 	* Двойной клик на списке слов - перевод в новой вкладке
+	* Избавление от зависимости python-gtkhtml2
+	* Горячие клавишы для активации движка <Alt>-1,2,3...9
 
-	-- Renat Nasyrov (renatn@gmail.com) 2008/04/10
+	-- Renat Nasyrov (renatn@gmail.com) 2008/04/16
 
 SLog (0.9) unstable
 	
